--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hyperswarm/replicator",
-  "version": "2.0.2",
-  "description": "Replicates data structures easily using hyperswarm",
+  "name": "@web4/replicator",
+  "version": "1.0.0",
+  "description": "Replicates data structures easily using bitswarm",
   "main": "index.js",
   "scripts": {
     "test": "standard && tape test/*.js"
@@ -9,19 +9,19 @@
   "author": "Mathias Buus (@mafintosh)",
   "license": "MIT",
   "dependencies": {
-    "hypercore-protocol": "^8.0.7",
-    "hyperswarm": "^2.13.0",
+    "@web4/bit-protocol": "^1.0.0",
+    "bitswarm": "^1.0.0",
     "pump": "^3.0.0"
   },
   "devDependencies": {
+    "@web4/unichain": "^1.0.0",
     "dht-rpc": "^4.9.6",
-    "hypercore": "^9.7.5",
     "random-access-memory": "^3.1.2",
     "standard": "^14.3.1",
     "tape": "^5.1.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hyperswarm/replicator.git"
+    "url": "https://github.com/bitwebs/replicator.git"
   }
 }
